--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -62,22 +62,6 @@
   overflow-x : hidden;
   scrollbar-gutter : auto;
 }
-#sidebardiv::-webkit-scrollbar {
-    width: 0.6em;
-    height : 30px;
-    /*overflow : overlay;*/
-    background: transparent;
-}
-#sidebardiv::-webkit-scrollbar-track {
-    background-color: transparent;
-    display : none;
-    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
-}
-#sidebardiv::-webkit-scrollbar-thumb {
-  background-color: var(--light);
-  outline: 0px solid green;
-}
-
 
 /* ---------------------------------------------------
     Information div
@@ -98,6 +82,10 @@
   text-align: justify;
   text-justify: inter-word;
   color: var(--lightgray);
+
+  overflow-y : overlay;
+  overflow-x : hidden;
+  scrollbar-gutter : auto;
 }
 
 
@@ -145,6 +133,33 @@
   color: #FFA500;
 }
 
+
+/* ---------------------------------------------------
+    SCROLLBAR
+----------------------------------------------------- */
+
+#informationdiv::-webkit-scrollbar,
+#sidebardiv::-webkit-scrollbar {
+    width: 0.6em;
+    /*height : 30px;*/
+    /*overflow : overlay;*/
+    background: transparent;
+}
+#informationdiv::-webkit-scrollbar-thumb,
+#sidebardiv::-webkit-scrollbar-track {
+    display : none;
+    /*background-color: transparent;*/
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+}
+#informationdiv::-webkit-scrollbar-track,
+#sidebardiv::-webkit-scrollbar-thumb {
+    height:30px;
+  background-color: var(--light);
+  border: 0px solid green;
+}
+/*#informationdiv::-webkit-scrollbar
+#informationdiv::-webkit-scrollbar-thumb
+#informationdiv::-webkit-scrollbar-track*/
 
 
 /* ---------------------------------------------------
