--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -62,22 +62,6 @@
   overflow-x : hidden;
   scrollbar-gutter : auto;
 }
-#sidebardiv::-webkit-scrollbar {
-    width: 0.6em;
-    height : 30px;
-    /*overflow : overlay;*/
-    background: transparent;
-}
-#sidebardiv::-webkit-scrollbar-track {
-    background-color: transparent;
-    display : none;
-    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
-}
-#sidebardiv::-webkit-scrollbar-thumb {
-  background-color: var(--light);
-  outline: 0px solid green;
-}
-
 
 /* ---------------------------------------------------
     Information div
@@ -98,6 +82,10 @@
   text-align: justify;
   text-justify: inter-word;
   color: var(--lightgray);
+
+  overflow-y : overlay;
+  overflow-x : hidden;
+  scrollbar-gutter : auto;
 }
 
 
@@ -146,6 +134,33 @@
 }
 
 
+/* ---------------------------------------------------
+    SCROLLBAR
+----------------------------------------------------- */
+
+#informationdiv::-webkit-scrollbar,
+#sidebardiv::-webkit-scrollbar {
+    width: 0.6em;
+    /*height : 30px;*/
+    /*overflow : overlay;*/
+    background: transparent;
+}
+#informationdiv::-webkit-scrollbar-thumb,
+#sidebardiv::-webkit-scrollbar-track {
+    display : none;
+    /*background-color: transparent;*/
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+}
+#informationdiv::-webkit-scrollbar-track,
+#sidebardiv::-webkit-scrollbar-thumb {
+    height:30px;
+  background-color: var(--light);
+  border: 0px solid green;
+}
+/*#informationdiv::-webkit-scrollbar
+#informationdiv::-webkit-scrollbar-thumb
+#informationdiv::-webkit-scrollbar-track*/
+
 
 /* ---------------------------------------------------
     GRAPHS STYLING
@@ -157,7 +172,7 @@
 /*.visualize-source-container {*/
 .sourcegraph-container {
         /* Position & dimension */
-    height: 25%;
+    height: 28%;
     position:relative;
         /* spacing */
     margin-bottom : 35px;
@@ -166,6 +181,8 @@
     margin : 4px 4px 25px 4px;
     border: solid var(--gray) 4px;
     border-radius: 4px;
+        /* Overlaying */
+    z-index: 0;
 }
 
     /* Bottom delimiter for sourcegraph-container */
@@ -183,6 +200,7 @@
      */
 .sourcegraph-text {
         /* Position & dimensions */
+    position : relative;
     width: 100%;
     height: 20%;
         /* font color & content properties */
@@ -192,6 +210,8 @@
     text-align:center;
     overflow: hidden;
     pointer-events: none;
+        /* Overlaying */
+    z-index: 1;
 }
 
 
@@ -200,11 +220,21 @@
      */
 .sourcegraph-chart {
         /* size & position */
+    position : relative;
     width: 100%;
     height: 80%;
         /* color & content properties */
-    pointer-events: none;
+    /*pointer-events: none;*/
     background-color: var(--gray);
+        /* Overlaying */
+    z-index: 1;
+}
+
+.sourcegraph-chart>svg {
+        /* size & position */
+    position : relative;
+    width: 100%;
+    height: 100%;
 }
 
 
