--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -3,12 +3,12 @@
 ----------------------------------------------------- */
 
 :root {
-  --color-bg: #000000;
-  --color-primary: #FFA500;
-  --color-accent: #EE801E;
-  --color-darkgray: #222222;
-  --color-gray: #888888;
-  --color-lightgray: #E3E0DD;
+  --bg: #000000;
+  --darkgray: #333333;
+  --gray: #888888;
+  --lightgray: #E3E0DD;
+  --light: #FFA500;
+  --darker: #FF8C00;
 }
 
 /* ---------------------------------------------------
@@ -51,13 +51,18 @@
       /* font config */
   font-size : 2vw;
   font-family: 'Jura', sans-serif;
-  color:#FFA500;
+  color: var(--light);
 }
 
 #sidebardiv {
   display: none;
   height : 93%;
-  background-color : black;
+
+  background: #959595;
+  background: -moz-linear-gradient(left, var(--darkgray) 0%, var(--bg) 50%, var(--darkgray) 100%);
+  background: -webkit-linear-gradient(left, var(--darkgray) 0%,var(--bg) 50%,var(--darkgray) 100%);
+  background: linear-gradient(to right, var(--darkgray) 0%,var(--bg) 50%,var(--darkgray) 100%);
+
   overflow-y : overlay;
   overflow-x : hidden;
   scrollbar-gutter : auto;
@@ -72,10 +77,9 @@
   display:block;
 
   background: #0e0e0e;
-  background: -moz-linear-gradient(top, var(--color-bg) 0%, var(--color-darkgray) 100%);
-  background: -webkit-linear-gradient(top, var(--color-bg) 0%,var(--color-darkgray) 100%);
-  background: linear-gradient(to bottom, var(--color-bg) 0%,var(--color-darkgray) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#333333',GradientType=0 );
+  background: -moz-linear-gradient(top, var(--bg) 0%, var(--darkgray) 100%);
+  background: -webkit-linear-gradient(top, var(--bg) 0%,var(--darkgray) 100%);
+  background: linear-gradient(to bottom, var(--bg) 0%,var(--darkgray) 100%);
 
   font-family: 'Jura', sans-serif;
   font-size: 1.5vmin;
@@ -88,7 +92,6 @@
   scrollbar-gutter : auto;
 }
 
-
 .info-paragraph {
   margin: 1vmin;
   padding: 1vmin;
@@ -99,7 +102,6 @@
 }
 
 .section-header {
-
   display:flex;
   align-items: center;
 
@@ -130,7 +132,7 @@
 }
 
 .info-paragraph a {
-  color: #FFA500;
+  color: var(--light);
 }
 
 
@@ -153,7 +155,7 @@
 }
 #informationdiv::-webkit-scrollbar-track,
 #sidebardiv::-webkit-scrollbar-thumb {
-    height:30px;
+  height:30px;
   background-color: var(--light);
   border: 0px solid green;
 }
@@ -175,14 +177,22 @@
     height: 28%;
     position:relative;
         /* spacing */
-    margin-bottom : 35px;
+    padding: 4px
         /* Color & border */
-    background-color: var(--gray);
-    margin : 4px 4px 25px 4px;
-    border: solid var(--gray) 4px;
+
+    background-color: #FFFFFF;
+    /*
+    background: -moz-linear-gradient(top, var(--bg) 0%, var(--darkgray) 100%);
+    background: -webkit-linear-gradient(top, var(--bg) 0%,var(--darkgray) 100%);
+    background: linear-gradient(to bottom, var(--bg) 0%,var(--darkgray) 100%);
+    */
+
+    margin : 5px 5px 3px 5px;
+    border: solid red 4px;
     border-radius: 4px;
         /* Overlaying */
     z-index: 0;
+
 }
 
     /* Bottom delimiter for sourcegraph-container */
@@ -212,6 +222,9 @@
     pointer-events: none;
         /* Overlaying */
     z-index: 1;
+
+    font-family: 'Jura', sans-serif;
+    color: var(--lightgray);
 }
 
 
@@ -221,11 +234,12 @@
 .sourcegraph-chart {
         /* size & position */
     position : relative;
-    width: 100%;
+    width: 90%;
     height: 80%;
+    margin:auto;
         /* color & content properties */
     /*pointer-events: none;*/
-    background-color: var(--gray);
+    background-color: black;
         /* Overlaying */
     z-index: 1;
 }
@@ -242,7 +256,7 @@
      */
 .line {
     fill: none;
-    stroke: #ffab00;
+    stroke: var(--darker);
     stroke-width: 3;
 }
 
