--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -42,12 +42,12 @@
 }
 
 #menubar span {
-    /* vh = viewport-related units https://stackoverflow.com/questions/16056591/font-scaling-based-on-width-of-container#answer-19818026 */
-    /* TODO : use svg instead ? https://css-tricks.com/fitting-text-to-a-container/ */
-        /* remove interline */
-    padding: 0;
-    margin: 0;
-    margin-left: 1vw;
+  /* vh = viewport-related units https://stackoverflow.com/questions/16056591/font-scaling-based-on-width-of-container#answer-19818026 */
+  /* TODO : use svg instead ? https://css-tricks.com/fitting-text-to-a-container/ */
+      /* remove interline */
+  padding: 0;
+  margin: 0;
+  margin-left: 1vw;
       /* font config */
   font-size : 2vw;
   font-family: 'Jura', sans-serif;
@@ -58,10 +58,7 @@
   display: none;
   height : 93%;
 
-  background: #959595;
-  background: -moz-linear-gradient(left, var(--darkgray) 0%, var(--bg) 50%, var(--darkgray) 100%);
-  background: -webkit-linear-gradient(left, var(--darkgray) 0%,var(--bg) 50%,var(--darkgray) 100%);
-  background: linear-gradient(to right, var(--darkgray) 0%,var(--bg) 50%,var(--darkgray) 100%);
+  background: var(--bg);
 
   overflow-y : overlay;
   overflow-x : hidden;
@@ -82,7 +79,7 @@
   background: linear-gradient(to bottom, var(--bg) 0%,var(--darkgray) 100%);
 
   font-family: 'Jura', sans-serif;
-  font-size: 1.5vmin;
+  font-size: 2vmin;
   text-align: justify;
   text-justify: inter-word;
   color: var(--lightgray);
@@ -93,8 +90,7 @@
 }
 
 .info-paragraph {
-  margin: 1vmin;
-  padding: 1vmin;
+  padding: 2vmin;
 }
 
 #info-text {
@@ -106,7 +102,7 @@
   align-items: center;
 
   height: 3vmin;
-  margin-top: 2vmin;
+  margin-top: 1.5vmin;
   margin-left: 3vmin;
   margin-right: 3vmin;
 
@@ -142,26 +138,15 @@
 
 #informationdiv::-webkit-scrollbar,
 #sidebardiv::-webkit-scrollbar {
-    width: 0.6em;
-    /*height : 30px;*/
-    /*overflow : overlay;*/
-    background: transparent;
+  width: 0.6em;
+  background: transparent;
 }
-#informationdiv::-webkit-scrollbar-thumb,
-#sidebardiv::-webkit-scrollbar-track {
-    display : none;
-    /*background-color: transparent;*/
-    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
-}
+
 #informationdiv::-webkit-scrollbar-track,
 #sidebardiv::-webkit-scrollbar-thumb {
   height:30px;
-  background-color: var(--light);
-  border: 0px solid green;
+  background-color: transparent;
 }
-/*#informationdiv::-webkit-scrollbar
-#informationdiv::-webkit-scrollbar-thumb
-#informationdiv::-webkit-scrollbar-track*/
 
 
 /* ---------------------------------------------------
@@ -177,21 +162,19 @@
     height: 28%;
     position:relative;
         /* spacing */
-    padding: 4px
+    padding: 4px;
         /* Color & border */
 
-    background-color: #FFFFFF;
-    /*
     background: -moz-linear-gradient(top, var(--bg) 0%, var(--darkgray) 100%);
     background: -webkit-linear-gradient(top, var(--bg) 0%,var(--darkgray) 100%);
     background: linear-gradient(to bottom, var(--bg) 0%,var(--darkgray) 100%);
-    */
 
     margin : 5px 5px 3px 5px;
-    border: solid red 4px;
+    border: solid var(--bg) 1px;
     border-radius: 4px;
+    opacity: 100%;
         /* Overlaying */
-    z-index: 0;
+    /*z-index: 0;*/
 
 }
 
@@ -215,7 +198,7 @@
     height: 20%;
         /* font color & content properties */
     color : var(--bg);
-    font-size: 125%;
+    font-size: 2.5vmin.;
     font-weight: bold;
     text-align:center;
     overflow: hidden;
@@ -239,7 +222,6 @@
     margin:auto;
         /* color & content properties */
     /*pointer-events: none;*/
-    background-color: black;
         /* Overlaying */
     z-index: 1;
 }
@@ -251,6 +233,17 @@
     height: 100%;
 }
 
+.domain {
+  stroke: var(--lightgray);
+}
+
+.tick {
+  stroke: var(--lightgray);
+}
+
+.tick line {
+  stroke: var(--lightgray);
+}
 
     /*line charts for sources and mentions
      */
@@ -261,7 +254,6 @@
 }
 
 /* Style the dots by assigning a fill and stroke */
-.dot {
-    fill: #ffab00;
-    stroke: #fff;
+.sourcegraph-chart .circle {
+    fill: var(--darkgray);
 }
