--- a/css/index.css
+++ b/css/index.css
@@ -18,8 +18,8 @@
   /*  Background style
    */
 body {
-  height : 100%;
-  width : 100%;
+  /*height : 100%;*/
+  /*width : 100%;*/
   overflow: auto;
   background-color : var(--gray);
 }
